# micro_sensor

./: .gitattributes  .gitignore  Cargo.toml  python_read.py  readme.md
python/: data_investigation.ipynb  python_read.py  python_save.py
python/microbit_serial/: __init__.py  serial.py
src/: average.rs  control.rs  main.rs  serial_comms.rs
